@@ -40,7 +40,7 @@ public:
     unsigned int height() const;
     int ascent() const;
     int descent() const { return m_fontstruct ? m_fontstruct->descent : 0; }
-    void drawText(const FbDrawable &w, int screen, GC gc, const FbString &text, size_t len, int x, int y, FbTk::Orientation orient) const;
+    void drawText(const FbDrawable &w, int screen, GC gc, const FbString &text, size_t len, int x, int y, FbTk::Orientation orient);
 
     bool validOrientation(FbTk::Orientation orient);
 
@@ -79,6 +79,7 @@ private:
     void drawRotText(Drawable w, int screen, GC gc, const FbString &text, size_t len, int x, int y, FbTk::Orientation orient) const;
 
     XRotFontStruct *m_rotfonts[4]; ///< rotated font structure (only 3 used)
+    bool m_rotfonts_loaded[4]; // whether we've tried yet
     XFontStruct *m_fontstruct; ///< X font structure
 
 };
