@@ -36,7 +36,7 @@ public:
     XftFontImp(const char *fontname, bool utf8);
     ~XftFontImp();
     bool load(const std::string &name);
-    void drawText(const FbDrawable &w, int screen, GC gc, const FbString &text, size_t len, int x, int y , FbTk::Orientation orient) const;
+    void drawText(const FbDrawable &w, int screen, GC gc, const FbString &text, size_t len, int x, int y , FbTk::Orientation orient);
     unsigned int textWidth(const FbString &text, unsigned int len) const;
     unsigned int height() const;
     int ascent() const { return m_xftfonts[0] ? m_xftfonts[0]->ascent : 0; }
@@ -47,6 +47,7 @@ public:
 
 private:
     XftFont *m_xftfonts[4]; // 4 possible orientations
+    bool m_xftfonts_loaded[4]; // whether we've tried loading the orientation
     // rotated xft fonts don't give proper extents info, so we keep the "real"
     // one around for it
     bool m_utf8mode;
