@@ -36,7 +36,7 @@ public:
     XmbFontImp(const char *fontname, bool utf8);
     ~XmbFontImp();
     bool load(const std::string &name);
-    virtual void drawText(const FbDrawable &w, int screen, GC gc, const FbString &text, size_t len, int x, int y, FbTk::Orientation orient) const;
+    virtual void drawText(const FbDrawable &w, int screen, GC gc, const FbString &text, size_t len, int x, int y, FbTk::Orientation orient);
     unsigned int textWidth(const FbString &text, unsigned int len) const;
     unsigned int height() const;
     int ascent() const { return m_setextents ? -m_setextents->max_ink_extent.y : 0; }
